--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dash==2.17.1
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-bootstrap-components==1.6.0
+dash-bootstrap-templates=1.2.0
 gunicorn==22.0.0
 matplotlib-inline==0.1.7
 numpy==1.26.1
